--- a/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -199,10 +199,16 @@
     <Compile Include="Migrations\20200925131458_Compra.designer.cs">
       <DependentUpon>20200925131458_Compra.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20200925173753_Promocao.cs" />
+    <Compile Include="Migrations\20200925173753_Promocao.designer.cs">
+      <DependentUpon>20200925173753_Promocao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="ProdutoDAOEntity.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Promocao.cs" />
+    <Compile Include="PromocaoProduto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlLoggerProvider.cs" />
   </ItemGroup>
