Entity Framework Core: Banco de dados de forma eficiente (Aula 07 - Relacionamento Um para Um no Entity)

--- a/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -184,7 +184,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Compra.cs" />
+    <Compile Include="Endereco.cs" />
     <Compile Include="IProdutoDao.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="Migrations\20200924211709_Inicial.cs" />
@@ -202,6 +204,10 @@
     <Compile Include="Migrations\20200925173753_Promocao.cs" />
     <Compile Include="Migrations\20200925173753_Promocao.designer.cs">
       <DependentUpon>20200925173753_Promocao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20200925190510_Cliente.cs" />
+    <Compile Include="Migrations\20200925190510_Cliente.designer.cs">
+      <DependentUpon>20200925190510_Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
