Asp.NET Core: Uma webapp usando o padrão MVC (Aula 05 - Organizando a aplicação)

--- a/Alura.ListaLeitura/Alura.ListaLeitura.App/Alura.ListaLeitura.App.csproj
+++ b/Alura.ListaLeitura/Alura.ListaLeitura.App/Alura.ListaLeitura.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,7 +15,7 @@
     <None Update="HTML\formulario.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="HTML\para-ler.html">
+    <None Update="HTML\lista.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Repositorio\livros.csv">
