ASP.NET Core Parte 3: Identity (Aula 6 - Fazendo login externo)

--- a/ASPNETCore2-Parte3-master/antes/Item05/CasaDoCodigo/appsettings.json
+++ b/ASPNETCore2-Parte3-master/antes/Item05/CasaDoCodigo/appsettings.json
@@ -25,5 +25,11 @@
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CasaDoCodigo;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "AppIdentityContextConnection": "DataSource=CasaDoCodigo.MVC.db"
+  },
+  "ExternalLogin": {
+    "Microsoft": {
+      "ClientId": "995d1bdb-52e8-4684-9125-8239c6e492c8",
+      "ClientSecret": "MlUv~kvziP.MxdBo.z~cuv8gOUh4P95rdj"
+    }
   }
 }
