--- a/testes-integracao/Alura.CoisasAFazer.Testes/Alura.CoisasAFazer.Testes.csproj
+++ b/testes-integracao/Alura.CoisasAFazer.Testes/Alura.CoisasAFazer.Testes.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -17,7 +18,6 @@
     <ProjectReference Include="..\src\Alura.CoisasAFazer.Core\Alura.CoisasAFazer.Core.csproj" />
     <ProjectReference Include="..\src\Alura.CoisasAFazer.Infrastructure\Alura.CoisasAFazer.Infrastructure.csproj" />
     <ProjectReference Include="..\src\Alura.CoisasAFazer.Services\Alura.CoisasAFazer.Services.csproj" />
-    <ProjectReference Include="..\src\Alura.CoisasAFazer.WebApp\Alura.CoisasAFazer.WebApp.csproj" />
   </ItemGroup>
 
 </Project>
